--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
   <script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 <body>
-  <h1>test</h1>
+  <section class="main">
+    <!--h1 GENE-->
+    <p class="header"></p>
+    <div class="main-container">
+      <div class="link-container"><a href="https://facebook.com/visitgene" class="link">FACEBOOK
+          <div class="tooltip">facebook.com/visitgene</div></a><a href="https://instagram.com/visitgene" class="link">INSTAGRAM
+          <div class="tooltip">instagram.com/visitgene</div></a></div>
+      <div class="logo"></div>
+      <div class="link-container"><a class="link">YOUTUBE
+          <div class="tooltip">coming soon</div></a><a href="https://twitter.com/visitgene" class="link">TWITTER
+          <div class="tooltip">twitter.com/visitgene</div></a></div>
+    </div>
+    <div class="footer">
+      <p>© 2017 by GENE. All rights reserved.</p>
+    </div>
+  </section>
 </body>
