--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<html></html>
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="GENE - official band page. Music, videos, live dates and more.">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- FAVICONS-->
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/assets/icons/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <title>GENE</title>
-  <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-  <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
-  <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/js/script.js"></script>
-</head>
-<body>
-  <section class="main">
-    <!--h1 GENE-->
-    <p class="header"></p>
-    <div class="main-container">
-      <div class="link-container"><a href="https://facebook.com/visitgene" class="link">FACEBOOK
-          <div class="tooltip">facebook.com/visitgene</div></a><a href="https://instagram.com/visitgene" class="link">INSTAGRAM
-          <div class="tooltip">instagram.com/visitgene</div></a></div>
-      <div class="logo"></div>
-      <div class="link-container"><a class="link">YOUTUBE
-          <div class="tooltip">coming soon</div></a><a href="https://twitter.com/visitgene" class="link">TWITTER
-          <div class="tooltip">twitter.com/visitgene</div></a></div>
-    </div>
-    <div class="footer">
-      <p>© 2017 by GENE. All rights reserved.</p>
-    </div>
-  </section>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="GENE - official band page. Music, videos, live dates and more.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- FAVICONS-->
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/assets/icons/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <title>GENE</title>
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
+    <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
+  </head>
+  <body>
+    <section class="main">
+      <!--h1 GENE-->
+      <p class="header"></p>
+      <div class="main-container">
+        <div class="link-container"><a href="https://facebook.com/visitgene" class="link">FACEBOOK
+            <div class="tooltip">facebook.com/visitgene</div></a><a href="https://instagram.com/visitgene" class="link">INSTAGRAM
+            <div class="tooltip">instagram.com/visitgene</div></a></div>
+        <div class="logo"></div>
+        <div class="link-container"><a class="link">YOUTUBE
+            <div class="tooltip">coming soon</div></a><a href="https://twitter.com/visitgene" class="link">TWITTER
+            <div class="tooltip">twitter.com/visitgene</div></a></div>
+      </div>
+      <div class="footer">
+        <p>© 2017 by GENE. All rights reserved.</p>
+      </div>
+    </section>
+  </body>
+</html>
