Added coming soon.

--- a/index.html
+++ b/index.html
@@ -31,20 +31,31 @@
   </head>
   <body>
     <section class="main">
-      <!--h1 GENE-->
-      <p class="header"></p>
-      <div class="main-container">
-        <div class="link-container"><a href="https://facebook.com/visitgene" class="link">FACEBOOK
-            <div class="tooltip">facebook.com/visitgene</div></a><a href="https://instagram.com/visitgene" class="link">INSTAGRAM
-            <div class="tooltip">instagram.com/visitgene</div></a></div>
-        <div class="logo"></div>
-        <div class="link-container"><a class="link">YOUTUBE
-            <div class="tooltip">coming soon</div></a><a href="https://twitter.com/visitgene" class="link">TWITTER
-            <div class="tooltip">twitter.com/visitgene</div></a></div>
-      </div>
-      <div class="footer">
-        <p>© 2017 by GENE. All rights reserved.</p>
-      </div>
+      <h1>coming soon</h1>
+      <h1>coming soon</h1>
+      <h1>coming soon</h1>
+      <h1>coming soon</h1>
+      <h1>coming soon</h1>
+      <h1>coming soon</h1>
+      <!--p.header-->
+      <!--.main-container-->
+      <!--  .link-container-->
+      <!--    a(href='https://facebook.com/visitgene').link FACEBOOK-->
+      <!--      .tooltip facebook.com/visitgene-->
+      <!---->
+      <!--    a(href='https://instagram.com/visitgene').link INSTAGRAM-->
+      <!--      .tooltip instagram.com/visitgene-->
+      <!---->
+      <!--  .logo-->
+      <!--  .link-container-->
+      <!--    a.link YOUTUBE-->
+      <!--      .tooltip coming soon-->
+      <!---->
+      <!--    a(href='https://twitter.com/visitgene').link TWITTER-->
+      <!--      .tooltip twitter.com/visitgene-->
+      <!---->
+      <!--.footer-->
+      <!--  p © 2017 by GENE. All rights reserved.-->
     </section>
   </body>
 </html>
