--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
       <!--    a(href='https://twitter.com/visitgene').link TWITTER-->
       <!--      .tooltip twitter.com/visitgene-->
       <!---->
-      <!--.footer-->
-      <!--  p © 2017 by GENE. All rights reserved.-->
+      <div class="footer">
+        <p>© 2017 by GENE. All rights reserved.</p>
+      </div>
     </section>
   </body>
 </html>
